tests/reference_expr_unresolved/expected_diagnostics.txt
grammar.peg:1:23: error: Definition for this is missing.
 1 | First <- 'foo' Second Third
   |                       ~~~~~
